// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`na začátku 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "decodedToken": null,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "showError": false,
      "signingIn": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "casomiry": Object {
      "cyklo": true,
      "koloběžka": true,
      "maraton": true,
      "půlmaraton": true,
    },
    "novyMezicas": Object {
      "cyklo": Object {
        "cas": "",
        "showing": false,
      },
      "koloběžka": Object {
        "cas": "",
        "showing": false,
      },
      "maraton": Object {
        "cas": "",
        "showing": false,
      },
      "půlmaraton": Object {
        "cas": "",
        "showing": false,
      },
    },
  },
  "connected": false,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "stopky": Object {
      "byTypy": Object {},
      "invalidated": false,
      "typy": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
      "invalidated": false,
    },
  },
  "fetchingStopky": "init",
  "fetchingUcastnici": "init",
  "registrator": Object {
    "dohlasky": Object {
      "form": Object {
        "errorCode": "",
        "errorMessage": "",
        "jePrihlaskou": false,
        "platby": Array [],
        "prihlaska": Object {
          "datum": undefined,
          "kategorie": undefined,
          "kod": undefined,
          "mladistvyPotvrzen": undefined,
          "startCislo": undefined,
          "startovnePoSleve": undefined,
          "typ": undefined,
        },
        "saved": false,
        "saving": false,
        "showError": false,
        "ubytovani": Object {},
        "ucastnikId": undefined,
        "udaje": Object {
          "adresa": undefined,
          "email": undefined,
          "jmeno": undefined,
          "klub": undefined,
          "narozeni": Object {
            "den": undefined,
            "mesic": undefined,
            "rok": undefined,
          },
          "obec": undefined,
          "pohlavi": undefined,
          "prijmeni": undefined,
          "psc": undefined,
          "stat": "Česká republika",
          "telefon": undefined,
        },
        "validate": false,
      },
      "platby": Object {
        "castka": undefined,
        "datum": undefined,
        "novaPlatbaMinified": true,
        "poznamka": undefined,
        "typ": "hotově",
        "validate": false,
      },
      "startCislo": Object {
        "showing": false,
      },
    },
    "prihlaseni": Object {
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "prihlasky": Object {
      "form": Object {
        "errorCode": "",
        "errorMessage": "",
        "jePrihlaskou": true,
        "platby": Array [],
        "prihlaska": Object {
          "datum": undefined,
          "kategorie": undefined,
          "kod": undefined,
          "mladistvyPotvrzen": undefined,
          "startCislo": undefined,
          "startovnePoSleve": undefined,
          "typ": undefined,
        },
        "saved": false,
        "saving": false,
        "showError": false,
        "ubytovani": Object {},
        "ucastnikId": undefined,
        "udaje": Object {
          "adresa": undefined,
          "email": undefined,
          "jmeno": undefined,
          "klub": undefined,
          "narozeni": Object {
            "den": undefined,
            "mesic": undefined,
            "rok": undefined,
          },
          "obec": undefined,
          "pohlavi": undefined,
          "prijmeni": undefined,
          "psc": undefined,
          "stat": "Česká republika",
          "telefon": undefined,
        },
        "validate": false,
      },
      "platby": Object {
        "castka": undefined,
        "datum": undefined,
        "novaPlatbaMinified": true,
        "poznamka": undefined,
        "typ": "hotově",
        "validate": false,
      },
      "startCislo": Object {
        "showing": false,
      },
    },
    "startovniCisla": Object {
      "odstartovani": false,
    },
    "ubytovani": Object {
      "jenUbytovani": true,
      "loading": Object {},
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "ucastniciDigest": Object {
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
}
`;

exports[`websocket connected 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "decodedToken": null,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "showError": false,
      "signingIn": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "casomiry": Object {
      "cyklo": true,
      "koloběžka": true,
      "maraton": true,
      "půlmaraton": true,
    },
    "novyMezicas": Object {
      "cyklo": Object {
        "cas": "",
        "showing": false,
      },
      "koloběžka": Object {
        "cas": "",
        "showing": false,
      },
      "maraton": Object {
        "cas": "",
        "showing": false,
      },
      "půlmaraton": Object {
        "cas": "",
        "showing": false,
      },
    },
  },
  "connected": true,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "stopky": Object {
      "byTypy": Object {},
      "invalidated": false,
      "typy": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
      "invalidated": false,
    },
  },
  "fetchingStopky": "init",
  "fetchingUcastnici": "init",
  "registrator": Object {
    "dohlasky": Object {
      "form": Object {
        "errorCode": "",
        "errorMessage": "",
        "jePrihlaskou": false,
        "platby": Array [],
        "prihlaska": Object {
          "datum": undefined,
          "kategorie": undefined,
          "kod": undefined,
          "mladistvyPotvrzen": undefined,
          "startCislo": undefined,
          "startovnePoSleve": undefined,
          "typ": undefined,
        },
        "saved": false,
        "saving": false,
        "showError": false,
        "ubytovani": Object {},
        "ucastnikId": undefined,
        "udaje": Object {
          "adresa": undefined,
          "email": undefined,
          "jmeno": undefined,
          "klub": undefined,
          "narozeni": Object {
            "den": undefined,
            "mesic": undefined,
            "rok": undefined,
          },
          "obec": undefined,
          "pohlavi": undefined,
          "prijmeni": undefined,
          "psc": undefined,
          "stat": "Česká republika",
          "telefon": undefined,
        },
        "validate": false,
      },
      "platby": Object {
        "castka": undefined,
        "datum": undefined,
        "novaPlatbaMinified": true,
        "poznamka": undefined,
        "typ": "hotově",
        "validate": false,
      },
      "startCislo": Object {
        "showing": false,
      },
    },
    "prihlaseni": Object {
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "prihlasky": Object {
      "form": Object {
        "errorCode": "",
        "errorMessage": "",
        "jePrihlaskou": true,
        "platby": Array [],
        "prihlaska": Object {
          "datum": undefined,
          "kategorie": undefined,
          "kod": undefined,
          "mladistvyPotvrzen": undefined,
          "startCislo": undefined,
          "startovnePoSleve": undefined,
          "typ": undefined,
        },
        "saved": false,
        "saving": false,
        "showError": false,
        "ubytovani": Object {},
        "ucastnikId": undefined,
        "udaje": Object {
          "adresa": undefined,
          "email": undefined,
          "jmeno": undefined,
          "klub": undefined,
          "narozeni": Object {
            "den": undefined,
            "mesic": undefined,
            "rok": undefined,
          },
          "obec": undefined,
          "pohlavi": undefined,
          "prijmeni": undefined,
          "psc": undefined,
          "stat": "Česká republika",
          "telefon": undefined,
        },
        "validate": false,
      },
      "platby": Object {
        "castka": undefined,
        "datum": undefined,
        "novaPlatbaMinified": true,
        "poznamka": undefined,
        "typ": "hotově",
        "validate": false,
      },
      "startCislo": Object {
        "showing": false,
      },
    },
    "startovniCisla": Object {
      "odstartovani": false,
    },
    "ubytovani": Object {
      "jenUbytovani": true,
      "loading": Object {},
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "ucastniciDigest": Object {
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
}
`;

exports[`websocket disconnected 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "decodedToken": null,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "showError": false,
      "signingIn": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "casomiry": Object {
      "cyklo": true,
      "koloběžka": true,
      "maraton": true,
      "půlmaraton": true,
    },
    "novyMezicas": Object {
      "cyklo": Object {
        "cas": "",
        "showing": false,
      },
      "koloběžka": Object {
        "cas": "",
        "showing": false,
      },
      "maraton": Object {
        "cas": "",
        "showing": false,
      },
      "půlmaraton": Object {
        "cas": "",
        "showing": false,
      },
    },
  },
  "connected": false,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "stopky": Object {
      "byTypy": Object {},
      "invalidated": true,
      "typy": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
      "invalidated": true,
    },
  },
  "fetchingStopky": "init",
  "fetchingUcastnici": "init",
  "registrator": Object {
    "dohlasky": Object {
      "form": Object {
        "errorCode": "",
        "errorMessage": "",
        "jePrihlaskou": false,
        "platby": Array [],
        "prihlaska": Object {
          "datum": undefined,
          "kategorie": undefined,
          "kod": undefined,
          "mladistvyPotvrzen": undefined,
          "startCislo": undefined,
          "startovnePoSleve": undefined,
          "typ": undefined,
        },
        "saved": false,
        "saving": false,
        "showError": false,
        "ubytovani": Object {},
        "ucastnikId": undefined,
        "udaje": Object {
          "adresa": undefined,
          "email": undefined,
          "jmeno": undefined,
          "klub": undefined,
          "narozeni": Object {
            "den": undefined,
            "mesic": undefined,
            "rok": undefined,
          },
          "obec": undefined,
          "pohlavi": undefined,
          "prijmeni": undefined,
          "psc": undefined,
          "stat": "Česká republika",
          "telefon": undefined,
        },
        "validate": false,
      },
      "platby": Object {
        "castka": undefined,
        "datum": undefined,
        "novaPlatbaMinified": true,
        "poznamka": undefined,
        "typ": "hotově",
        "validate": false,
      },
      "startCislo": Object {
        "showing": false,
      },
    },
    "prihlaseni": Object {
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "prihlasky": Object {
      "form": Object {
        "errorCode": "",
        "errorMessage": "",
        "jePrihlaskou": true,
        "platby": Array [],
        "prihlaska": Object {
          "datum": undefined,
          "kategorie": undefined,
          "kod": undefined,
          "mladistvyPotvrzen": undefined,
          "startCislo": undefined,
          "startovnePoSleve": undefined,
          "typ": undefined,
        },
        "saved": false,
        "saving": false,
        "showError": false,
        "ubytovani": Object {},
        "ucastnikId": undefined,
        "udaje": Object {
          "adresa": undefined,
          "email": undefined,
          "jmeno": undefined,
          "klub": undefined,
          "narozeni": Object {
            "den": undefined,
            "mesic": undefined,
            "rok": undefined,
          },
          "obec": undefined,
          "pohlavi": undefined,
          "prijmeni": undefined,
          "psc": undefined,
          "stat": "Česká republika",
          "telefon": undefined,
        },
        "validate": false,
      },
      "platby": Object {
        "castka": undefined,
        "datum": undefined,
        "novaPlatbaMinified": true,
        "poznamka": undefined,
        "typ": "hotově",
        "validate": false,
      },
      "startCislo": Object {
        "showing": false,
      },
    },
    "startovniCisla": Object {
      "odstartovani": false,
    },
    "ubytovani": Object {
      "jenUbytovani": true,
      "loading": Object {},
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
    "ucastniciDigest": Object {
      "kategorieFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
}
`;
